k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deutsche-spielen
  labels:
    app.kubernetes.io/name: deutsche-spielen
