k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deutsche-spielen
  namespace: deutsche-spielen
  labels:
    app: deutsche-spielen
spec:
  selector:
    app: deutsche-spielen
  ports:
  - name: http
    port: 80
    targetPort: 8000
