k8s/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: deutsche-spielen
  namespace: deutsche-spielen
spec:
  hosts:
  - deutsche-spielen.plsdontspam.me
  gateways:
  - deutsche-spielen-gateway
  http:
  - route:
    - destination:
        host: deutsche-spielen.deutsche-spielen.svc.cluster.local
        port:
          number: 80
